# mexc-futures-sdk

./: README.md  main.py  pyproject.toml
src/mexc_futures/: __init__.py  client.py  constants.py  exceptions.py  session.py  utils.py  websocket.py
src/mexc_futures/models/: __init__.py  account.py  market.py  orders.py
