[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mexc-futures"
version = "0.1.1"
description = "Python SDK for MEXC Futures API with async support"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Lanutrix" }
]
keywords = ["mexc", "futures", "trading", "api", "crypto", "async"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
    "Framework :: AsyncIO",
]
dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
    "fake-useragent>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/Lanutrix/mexc-futures-sdk"
Documentation = "https://github.com/Lanutrix/mexc-futures-sdk#readme"
Repository = "https://github.com/Lanutrix/mexc-futures-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/mexc_futures"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

